# JARVIS

./: .gitignore  CPU_mega_page.html  GPU_mega_page.html  Laptop & Portable CPU Performance.html  README.md  assistant.db  fix_env.py  pyproject.toml  reset_dev_env.ps1  run_jarvis.bat  scrape_passmark.py  test_playwright.py  test_tts_simple.py  verify_full_flow.py
.bench_cache/: cpu_ranks.json  gpu_ranks.json
.scraper_artifacts/: cdiscount_1759160134.html  cdiscount_1759163173.html  cdiscount_1759164097.html  cdiscount_1759165601.html  cdiscount_1759165799.html  cdiscount_1759166682.html  cdiscount_1759167197.html  cdiscount_1759167878.html  cdiscount_1759168856.html  cdiscount_1759169894.html  cdiscount_1759325597.html  cdiscount_1759326268.html  cdiscount_1759326610.html  cdiscount_1759330814.html  cdiscount_1759331698.html  cdiscount_1759332038.html  cdiscount_1759614037.html  cdiscount_1759758959.html  cdiscount_1759760784.html  cdiscount_1759761199.html  cdiscount_1759847855.html  cdiscount_1759847943.html  cdiscount_1759848507.html  cdiscount_1759848585.html  cdiscount_1759849195.html  cdiscount_1759853174.html  cdiscount_1759853873.html  cdiscount_1759854793.html  cdiscount_1759854823.html  cdiscount_1759854845.html  cdiscount_1759927659.html  cdiscount_1759927690.html  cdiscount_1759927710.html  cdiscount_1759933240.html  cdiscount_1759933268.html  cdiscount_1759933447.html  cdiscount_1759933579.html  cdiscount_1759937084.html  cdiscount_1759938088.html  cdiscount_1760009189.html  (+147 more)
.sessions/: darty_state.json
ALL_CPU/: PassMark - CPU Benchmarks - CPU Mega Page - Detailed List of Benchmarked CPUs.html
ALL_GPU/: PassMark - Video Card (GPU) Benchmarks - GPU Mega Page - Detailed List of Benchmarked Videocards.html
ALL_SSD/: PassMark - Hard Drive Benchmarks - Drive Mega Page - Detailed List of Benchmarked Storage Drives.html
CPU_mega_page_files/: 62bHydCX.html  71161633  9.html  AGSKWxUsFkkh0vykQbrIEpA0KpcBQDhM0RrZD0HDD7pddN_1q79y1A4KRJts8hlExwW0MivS66gwL9rqXfgFtbbM8R1ElNJV4qDUbWvewMHInr7iUJUTJj8L_enIOnr4V4L_7uy3E2ROFg==  AGSKWxWuCeFFdRa3jH0hvX7RAJ_ejQMIEG7FUQxXgyQz6hf8OmF47iHTu-pj3wA7uHufPjrpxZHijWBAnfX4hPXGBe9Wu1Cn8xyZY53T-d1jjparbPe8U5nf4dCDSsF0_58TQSj-ykL7ug==  AGSKWxXMhKVMzkfhZ4ynFYJAnVWP0cIE6zMKDLqZAGe2HeLBdrCKYy1kaASit7hvTXp11ixU4YP-c8Pujs_DqB5OmFUppTJ8wR7HW8PVTaTS8oqneIRpM2N8QC_u338DsX1rnuGFKorPtg==  CookieSync.html  aframe.html  async_usersync.html  checksync.html  cksync(1).html  cksync.html  cm  cm(1).html  cm(2).html  (+46 more)
(+265 files in other folders)
