[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-app"
version = "0.1.0"
description = "CLI assistant with price scrapers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright",
  "beautifulsoup4",
  "lxml",
  "pydantic",
  "typer",
  "APScheduler",
  "SQLAlchemy",
  "python-dotenv",
  "dateparser",
  "requests",
]

[project.scripts]
assistant = "assistant_app.interfaces.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["assistant_app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
